deploy/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: customerchurn-serving
  name: customerchurn-serving
spec:
  selector:
    matchLabels:
      app: customerchurn
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: customerchurn
        version: v1
    spec:
      containers:
      - name: tensorflow-serving
        image: tensorflow/serving:latest
        command:
        - tensorflow_model_server
        - --port=9000
        - --rest_api_port=9001
        ports:
        - containerPort: 9000
          protocol: TCP
        - containerPort: 9001
          protocol: TCP
        volumeMounts:
        - mountPath: /serving/models/config
          name: tf-serving-models-config
      volumes:
      - name: tf-serving-models-config
        configMap:
          name: tf-serving-models-config
---
apiVersion: v1
kind: Service
metadata:
  name: customerchurn-serving
  labels:
    app: customerchurn-serving
spec:
  ports:
  - name: grpc
    port: 9000
    protocol: TCP
  - name: rest
    port: 9001
    protocol: TCP
  selector:
    app: customerchurn-serving
  type: LoadBalancer
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customerchurn-serving
spec:
  hosts:
    - "*"
  gateways:
  - customerchurn-serving-gateway
  http:
  - route:
    - destination:
        host: customerchurn-serving.default.svc.cluster.local
        port:
          number: 9000
        subset: v1
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: customerchurn-serving
spec:
  host: customerchurn-serving.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  # define subset on label selector
  subsets:
  - name: v1
    labels:
      version: v1
